# xob64

./: .gitignore  Cargo.toml  debug.sh
.zed/: debug.json
src/: loader.rs  main.rs  runner.rs  wrapped.rs
src/runner/: callbacks.rs  compiler.rs
src/runner/compiler/: arith.rs  branch.rs  dump.rs  instr_utils.rs  load_store.rs  pauth.rs  register.rs
src/wrapped/: elf_lookup.rs  libc.rs  libcap.rs  overrides.rs  proxy.rs
src/wrapped/overrides/: libc.rs
tests/: hello_world.rs  print_args.rs
tests/binaries/: hello_world  print_args
